# chronoton

./: Context.md  README.md  _cy_inner.c  build_log.txt  chronoton_test.py  examples.md  pyproject.toml  setup.py
ShareDealing/: SingleAssetSingleTimeFrame.py  _execute_backtest_loop_ShareDealing.py  setup.py
docs/: _cy_inner.pyx  backtester.py  backtester_docs.md  cython_backtester.py  pyproject.toml  setup.py  tests.py  tests_cython.py
src/chronoton/: __init__.py  _cy_inner.c  _cy_inner.pyx  backtester.py  cython_backtester.py
src/chronoton/ShareDealing/: SingleAssetSingleTimeFrame.py  __init__.py  _execute_backtest_loop_ShareDealing- change to pyx when done.py
tests/: tests.py  tests_cython.py
